--- a/index.html
+++ b/index.html
@@ -1,3 +1,77 @@
-<h2>Stock Performance Dashboard</h2>
-<iframe src="https://public.tableau.com/views/SPYStockDashboard3/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-    width="1280" height="800"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tierra B. | Dashboard Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f7fa;
+      color: #222;
+    }
+    header {
+      background-color: #1a1a1a;
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header img {
+      max-width: 220px;
+      margin-bottom: 1rem;
+    }
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
+    .dashboard {
+      padding: 0 1rem;
+      margin-bottom: 3rem;
+    }
+    iframe {
+      width: 100%;
+      height: 720px;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      background-color: #222;
+      color: #aaa;
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+    }
+    @media (min-width: 768px) {
+      iframe {
+        height: 800px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="your-banner-image.png" alt="Portfolio Banner" />
+    <h1>Tierra B. | Dashboard Portfolio</h1>
+    <p>Insurance | Retail | Finance • Built with Tableau</p>
+  </header>
+
+  <main class="dashboard">
+    <h2>📈 SPY Stock Performance Dashboard</h2>
+    <iframe src="https://public.tableau.com/views/SPYStockDashboard3/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" allowfullscreen></iframe>
+  </main>
+
+  <footer>
+    © 2025 Tierra B. | All dashboards created with Tableau | Hosted with GitHub Pages
+  </footer>
+
+</body>
+</html>
