--- a/index.html
+++ b/index.html
@@ -7,91 +7,94 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f7fa;
-      color: #222;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background-color: #f8f9fa;
+      color: #111;
     }
     header {
       background-color: #1a1a1a;
-      color: #fff;
+      color: white;
       text-align: center;
       padding: 2rem 1rem;
-    }
-    header img {
-      max-width: 220px;
-      margin-bottom: 1rem;
     }
     h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
+      margin: 0;
+      font-size: 2rem;
+    }
+    .dashboard-section {
+      padding: 2rem 1rem;
+      max-width: 1280px;
+      margin: 0 auto;
     }
     h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 5px;
-      margin-top: 3rem;
       font-size: 1.5rem;
-    }
-    .dashboard {
-      padding: 0 1rem;
-      margin-bottom: 3rem;
-    }
-    iframe {
-      width: 100%;
-      height: 720px;
-      border: none;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.5rem;
     }
     footer {
-      background-color: #222;
-      color: #aaa;
+      background-color: #1a1a1a;
+      color: #ccc;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 1rem;
       font-size: 0.9rem;
-    }
-    @media (min-width: 768px) {
-      iframe {
-        height: 800px;
-      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="your-banner-image.png" alt="Portfolio Banner" />
     <h1>Tierra B. | Dashboard Portfolio</h1>
-    <p>Insurance | Retail | Finance • Built with Tableau</p>
+    <p>SPY Stock Dashboard — Finance Analytics with Tableau</p>
   </header>
 
-  <main class="dashboard">
+  <section class="dashboard-section">
     <h2>📈 SPY Stock Performance Dashboard</h2>
-    <div class='tableauPlaceholder' id='viz1750382888839' style='position: relative'>
-        <noscript><a href='#'><img alt='SPY Stock Performance DashboardTracking Monthly Return, Price Trends, and Volume ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SP&#47;SPYStockDashboard3&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a>
-        </noscript>
-          <object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-              <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
-              <param name='name' value='SPYStockDashboard3&#47;Dashboard1' /><param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
-              <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;SP&#47;SPYStockDashboard3&#47;Dashboard1&#47;1.png' /> 
-              <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' />
-              <param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' />
-          </object>
-    </div>                
-    <script type='text/javascript'>         
-      var divElement = document.getElementById('viz1750382888839');                    
-      var vizElement = divElement.getElementsByTagName('object')[0];                    
-      if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1280px';vizElement.style.height='827px';} 
-      else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1280px';vizElement.style.height='827px';} 
-      else { vizElement.style.width='100%';vizElement.style.height='1277px';}                     
-      var scriptElement = document.createElement('script');                    
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+
+    <!-- Tableau Embed -->
+    <div class='tableauPlaceholder' id='viz1750383365971' style='position: relative'>
+      <noscript>
+        <a href='#'>
+          <img alt='SPY Stock Performance DashboardTracking Monthly Return, Price Trends, and Volume'
+               src='https://public.tableau.com/static/images/SP/SPYStockDashboard3/Dashboard1/1_rss.png'
+               style='border: none' />
+        </a>
+      </noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='SPYStockDashboard3/Dashboard1' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/SP/SPYStockDashboard3/Dashboard1/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1750383365971');
+      var vizElement = divElement.getElementsByTagName('object')[0];
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.width = '1280px'; vizElement.style.height = '827px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.width = '1280px'; vizElement.style.height = '827px';
+      } else {
+        vizElement.style.width = '100%'; vizElement.style.height = '1277px';
+      }
+      var scriptElement = document.createElement('script');
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
- </main>
+  </section>
 
   <footer>
-    © 2025 Tierra B. | All dashboards created with Tableau | Hosted with GitHub Pages
+    &copy; 2025 Tierra B. | Tableau Public Portfolio
   </footer>
 
 </body>
