--- a/index.html
+++ b/index.html
@@ -40,26 +40,21 @@
       font-size: 0.9rem;
     }
   </style>
+  <script type="text/javascript" src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
 </head>
 <body>
 
   <header>
     <h1>Tierra B. | Dashboard Portfolio</h1>
-    <p>SPY Stock Dashboard — Finance Analytics with Tableau</p>
+    <p>Interactive Tableau Dashboards | Finance • Retail • Insurance</p>
   </header>
 
   <section class="dashboard-section">
     <h2>📈 SPY Stock Performance Dashboard</h2>
-
-    <!-- Tableau Embed -->
     <div class='tableauPlaceholder' id='viz1750383365971' style='position: relative'>
-      <noscript>
-        <a href='#'>
-          <img alt='SPY Stock Performance DashboardTracking Monthly Return, Price Trends, and Volume'
-               src='https://public.tableau.com/static/images/SP/SPYStockDashboard3/Dashboard1/1_rss.png'
-               style='border: none' />
-        </a>
-      </noscript>
+      <noscript><a href='#'><img alt='SPY Stock Dashboard'
+        src='https://public.tableau.com/static/images/SP/SPYStockDashboard3/Dashboard1/1_rss.png'
+        style='border: none' /></a></noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
@@ -74,7 +69,6 @@
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
         <param name='language' value='en-US' />
-        <param name='filter' value='publish=yes' />
       </object>
     </div>
     <script type='text/javascript'>
@@ -87,14 +81,47 @@
       } else {
         vizElement.style.width = '100%'; vizElement.style.height = '1277px';
       }
-      var scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+  </section>
+
+  <!-- 🔹 Retail Dashboard Embed Starts Here -->
+  <section class="dashboard-section">
+    <h2>🛒 Retail Sales Analytics Dashboard</h2>
+    <div class='tableauPlaceholder' id='viz1750392807772' style='position: relative'>
+      <noscript><a href='#'><img alt='Retail Analytics Dashboard'
+        src='https://public.tableau.com/static/images/Mo/MonthlyRetailAnalytics/Dashboard1/1_rss.png'
+        style='border: none' /></a></noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='MonthlyRetailAnalytics/Dashboard1' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/Mo/MonthlyRetailAnalytics/Dashboard1/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1750392807772');
+      var vizElement = divElement.getElementsByTagName('object')[0];
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.width = '1280px'; vizElement.style.height = '827px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.width = '1280px'; vizElement.style.height = '827px';
+      } else {
+        vizElement.style.width = '100%'; vizElement.style.height = '1077px';
+      }
     </script>
   </section>
 
   <footer>
-    &copy; 2025 Tierra B. | Tableau Public Portfolio
+    &copy; 2025 Tierra B. | Built with Tableau Public | Hosted on GitHub Pages
   </footer>
 
 </body>
