--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <header>
     <h1>Tierra B. | Dashboard Portfolio</h1>
-    <p>Interactive Tableau Dashboards | Finance • Retail • Insurance</p>
+    <p>Interactive Tableau Dashboards | Finance • Retail</p>
   </header>
 
   <section class="dashboard-section">
